# algorithm-archive

./: LICENSE  README.md
anyangle/2023/EPS_MCDT/: Entry.cpp  LICENSE  README.md  apt.txt  config.json
anyangle/2023/EPS_MCDT/End_Point_Search/search/: dijkstra.h  expansion.cpp
anyangle/2023/EPS_MCDT/End_Point_Search/structs/: cpd.cpp  graph.h  mesh.h
anyangle/2023/EPS_MCDT/figs/latex/: grid_plane_path.tex
anyangle/2023/EPS_MCDT/meshConverter/: grid2poly.h
anyangle/2023/EPS_MCDT_F/: Entry.cpp  README.md
anyangle/2023/EPS_MCDT_F/End_Point_Search/helpers/: geometry.h
anyangle/2023/EPS_MCDT_F/End_Point_Search/search/: epsSearchInstance.cpp  searchinstance.cpp
anyangle/2023/EPS_MCDT_F/End_Point_Search/structs/: cpd.h  point.h  searchnode.h
anyangle/2023/EPS_MCDT_F/figs/latex/: invalid_segments_start.tex
anyangle/2023/EPS_MCDT_F/meshConverter/: gridmap2poly.cpp  mesh2merged.h
anyangle/2023/EPS_MCDT_F/meshConverter/include_fade2d/: Point2.h  Triangle2.h
anyangle/2023/EPS_Rec/: .gitignore  CMakeLists.txt  Entry.cpp  README.md  apt.txt  compile.sh
anyangle/2023/EPS_Rec/End_Point_Search/helpers/: id_queue.h
anyangle/2023/EPS_Rec/End_Point_Search/search/: epsSearchInstance.h  searchinstance.h
anyangle/2023/EPS_Rec/meshConverter/: grid2rect.h  poly2mesh.cpp  poly2mesh.h
anyangle/2023/EPS_Rec_F/: .gitignore  Entry.cpp  README.md  compile.sh
anyangle/2023/EPS_Rec_F/End_Point_Search/helpers/: geometry.cpp
anyangle/2023/EPS_Rec_F/End_Point_Search/search/: eps.h  epsSearchInstance.h
anyangle/2023/EPS_Rec_F/End_Point_Search/structs/: polygon.h
anyangle/2023/EPS_Rec_F/meshConverter/CDTutils/: polymap2.cpp  polymap2.h
anyangle/2023/Gap_Search/: Entry.cpp  LICENSE  README.md  gap_search.hpp  graph_nodes.hpp  heuristics.hpp  nodes_pool.hpp  priority_queue.hpp  scene.hpp  solution_graph.hpp  vec2.hpp
anyangle/2023/Polyanya_MCDT/: CMakeLists.txt  Entry.cpp  README.md  compile.sh
anyangle/2023/Polyanya_MCDT/End_Point_Search/helpers/: constants.h
anyangle/2023/Polyanya_MCDT/End_Point_Search/search/: eps.h  epsSearchInstance.cpp  visibleSearchInstance.h
anyangle/2023/Polyanya_MCDT/End_Point_Search/structs/: edge.h  graph.cpp  mesh.cpp  vec_io.h
anyangle/2023/Polyanya_MCDT/data/: random512-25-0.map.scen
anyangle/2023/Polyanya_MCDT/figs/latex/: invalid_segments.tex
anyangle/2023/Polyanya_MCDT/meshConverter/: gridmap2rects.cpp  meshmerger.cpp
anyangle/2023/Polyanya_MCDT/meshConverter/fadeutils/: polymap.cpp  polymap.h
anyangle/2023/Polyanya_Rec/: CMakeLists.txt  Entry.cpp  README.md
anyangle/2023/Polyanya_Rec/Polyanya/search/: eps.h  epsSearchInstance.cpp  epsSearchInstance.h  expansion.h  visibleSearchInstance.cpp
anyangle/2023/Polyanya_Rec/Polyanya/structs/: mesh.cpp  mesh.h  vertex.h
anyangle/2023/Polyanya_Rec/meshConverter/: grid2poly.h
anyangle/2023/Polyanya_Rec/meshConverter/include_fade2d/: Edge2.h  SegmentChecker.h  Vector2.h
anyangle/2023/RayScan/: .gitignore  CMakeLists.txt  Entry.cpp  LICENSE  README.md
anyangle/2023/RayScan/rayscan/: CMakeLists.txt
anyangle/2023/RayScan/rayscan/env/: Grid.cpp  Grid.hpp
anyangle/2023/RayScan/rayscan/geo/: Angle.hxx  AngleSector.hpp  Point.hpp
anyangle/2023/RayScan/rayscan/inx/: bit_table.hpp
anyangle/2023/RayScan/rayscan/search/: BasicQueue.hpp  Bypass.hpp  DebugStruct.hpp  Expansion.cpp  Expansion.hpp  RayShoot.cpp  RayShoot.hpp  Scan.cpp  Scan.hpp  Search.cpp  Search.hpp  Vertex.hpp  fwd.hpp
classic/2023/2013-Dao/: Entry.cpp  GenericAStar.h  GenericHeap.h  LICENSE  Makefile  MinimalSectorAbstraction.cpp  MinimalSectorAbstraction.h  README.md  SearchEnvironment.cpp  SearchEnvironment.h
classic/2023/2013-subgoal-fast/: Entry.cpp  Entry.h  LICENSE  LICENSE.gppc  Makefile  README.md
classic/2023/2019-SGCH-JPD/: Entry.cpp  Makefile  README.md
classic/2023/2019-SGCH-JPD/source/: Sample.cpp
classic/2023/ConstrainedJPS/: .gitignore  Entry.cpp  Entry.h  README.md  dummy_listener.h  flexible_astar.h  global.cpp  global.h  gm_parser.cpp  gm_parser.h  gridmap.cpp  gridmap.h  helpers.cpp  jps.cpp  jps.h  jps2_expansion_policy_prune2.cpp
classic/2023/Warthog-Astar/: Entry.cpp  Makefile  README.md
classic/2023/Warthog-JPS2/: Entry.cpp  Makefile  README.md
classic/2023/Warthog-JPSplus/: Entry.cpp  Makefile  README.md
classic/2023/gppc_suboptCPD/: .gitignore  Dijkstra.h  Entry.cpp  Entry.h  GPPC.h  Hsymbol.h  LICENSE  Makefile  README.md  adj_array.h  adj_graph.h  binary_search.h  centroid.h  constants.h  cpd_base.cpp  cpd_base.h  cpd_centroid.h  heap.h  jps.cpp  jps.h  list_graph.h  mapper.h  order.h  query.cpp  query.h  range.h  square_wildcard.h  vec_io.h
(+54 files in other folders)
